web/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,700,300);


/* normalize */
p, h1, h2, h3, h4, h5, h6, h7, h8, h9 { margin-top: 0; }
dl, ol, ul { padding: 0; margin: 0; }

/* fixes */
.clearfix { height: 1%; overflow: hidden; }

/* responsive content inclusion */
.inlcnt     { display: none; }
span.inlcnt { padding: 0.4ex; }
@media handheld, only screen and (max-width: 480px) { .inlcnt { display:initial; } }

/* responsive content exclusion */
@media handheld, only screen and (max-width: 480px) { .exlcnt { display:none; } }

/**
 * Responsive list with dynamic column expansion
 */
.reslist > li { vertical-align: top; /* clear fix */ height: 1%; overflow: hidden; }
.reslist dt,
.reslist dd   { float: right; margin: 0; }
.reslist dt   { margin-left: .2em; margin-right: .2em; }
/* responsive column expansion */
@media handheld, only screen and (max-width: 480px) {
  .reslist .expcol { width:100%; }
}
/* responsive column exclusion */
@media handheld, only screen and (max-width: 480px) {
  .reslist dl > dt.exlcol,
  .reslist dl > dd.exlcol { width:auto; margin-left: 0; }
}

.topiclist > li > h1,
.topiclist > li > dl,
.topiclist > li > article header,
.topiclist > li > article dl {
width: 50%;
display: inline-block;
float: left;
}

body {
    background: #282D2B url(panoramarotator) no-repeat fixed;
    background-position: center 100%;
    background-size: 200% 200%;

    color: #A7A29C;

    font-family: "Open Sans",sans-serif !important;
    font-size: 100%;
    font-weight: 400;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    -webkit-text-size-adjust: 100%;

    display: block;
    border: 0;
    padding: 0;
    margin: 0;
    vertical-align: baseline;
}

@media only screen and (min-width: 476px) {
body { margin: 1.2em; }
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0;
    margin-top: 0;
    font-weight: normal;
    font-variant: normal;
    font-weight: 300;
    font-size: 1.4em;
    line-height: 1.3;
}

h1, h2, h3, h4, h5, h6,
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: #F0F0F0;
}

label { cursor:help; }

/* ------- begin old forum normalization ------- */

.content br + ul, .content br + ol {
    margin-top: 0;
}

.content ul + br, .content ol + br, .content blockquote + br, .content .codebox + br {
    display: none;
}

code br, .topiclist br, .post br, .content br {
    display:inline;
    margin:0;
}

.whoisonline p, .statistics p, #options-panel dd {
    margin: 0;
}

#postingbox fieldset, fieldset.fields1, fieldset.quick-login {
    margin: 0;
    padding: 0;
}

/* ------- end old forum normalization ------ */

p { margin-bottom: 0; }

a {
    text-decoration: none;
    color: white;
    outline: 0 none;
}

a:focus {
    outline: dotted 2px;
    outline-offset: 2px;
}

a:hover {
    text-decoration: underline;
    color: #FFCB0F;
}

a[class ="jump"] {
    font-size:smaller;
    font-family: monospace;
}

a[class ="jump"]:before {
    content:"(";
}

a[class ="jump"]:after {
    content:")";
}

a[class ="link-definition"] {
    padding-right:.4em;
    overflow:visible;
}

a[class ="link-definition"]:after {
    position:absolute;
    text-decoration: none;
    color: #BEBEFF;
    font-size: .6em;
    font-family: georgia, serif;
    font-weight: normal;
    content:"?";
}

a[class ="link-external"] {
    padding-right: 18px;
    background: transparent url(http://dl.dropboxusercontent.com/u/11948701/dengine.net/images/Icon_External_Link.png) no-repeat center right;
}

a[class ="link-rss"] {
    padding-right: 18px;
    background: transparent url(http://dl.dropboxusercontent.com/u/11948701/dengine.net/images/rssicon.png) no-repeat center right;
    background-size: 13px 12px;
}

span.hidden {
    display: none;
}

.issue_level {
    text-align: center;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    color: black;
}

hr {
    background-color: #6D6D6D;
    height: 1px;
    border: none;
    margin-top: 2em;
    margin-bottom: 2em;
}

hr.dashed {
    background: none;
    border-top: 1px dashed #6D6D6D;
}

.twocolumn {
    width: 50%;
    float: left;
}

.twocolumn ol {
    padding:0;
    margin:0;
}

@media only screen and (max-width: 767px) {
.collapsible {width: 100%; float: left; }
.collapsible:nth-child(n+1) { clear: left; }
}

.block {
    padding: 22px;
    margin: 0 .6em 1.2em .6em;
    height: 1%; overflow: hidden;
}

.block article {
    margin-top: 0;
}

.block section {
    margin-top: 1.2em;
}

.block article:first-of-type,
.block section:first-of-type {
    margin-top: 0;
}

.block article header {
    margin-bottom: .8em;
}

/* metadata */
.block article header p {
    font-style: italic;
}

/* related links bar */
.block div.links {
    margin: 0;
    position: relative;
    right: -1.3em;
    float: right;
    font-size: 8pt;
    height:0;
}

/*
 * Colors:
 */

#menu {
    background-color: rgba(0, 0, 0, 0.8);
}

#menu a:focus { outline-color: white; }

.block {
    background-color: rgba(0, 0, 0, 0.7);
    box-shadow: 1px 2px 3px 0px rgba(20, 20, 20, 0.4);
    box-shadow: 0 0 24px -8px rgb(110, 110, 110);
}

.rules {
    background-color: #05362D;
    color: #9FA79C;
}

.block a { color: #C59A57; }

.block a[href^="#"] { color: white; }

.block.nobackground a { color:white; }

.block h1 a, .block h2 a, .block h3 a, .block h4 a, .block h5 a, .block h6 a { color: white; }

.block a:hover { color: #FFCB0F; }

.major_issue { background-color:#ff4444; /* red */ }
.minor_issue { background-color:#ffee00; /* yellow */ }
.no_issue    { background-color:#00ee00; /* green */ }

.nobackground {
    background:none;
    box-shadow:none;
    padding: 0;
    margin-bottom: 0.6em;
    margin-top: -.6em;
}

.rules h1, .rules h2, .rules h3, .rules h4, .rules h5, .rules h6 { color:#FFD9BB; }

img {
    border: 0;
    padding: 0;
    margin: 0;
}

table.directory {
    margin-top: 1.2em;
    width: 100%;
    border-collapse: collapse;
    padding: inherit;
}
/* ... */

